K8s/guestbook/v1/example-ingress.yaml
#crc addons enable ingress
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: hello-guestbook.info
    http:
      paths:
      - path: /
        backend:
          serviceName: guestbook
          servicePort: 3000
